@@ -9,6 +9,7 @@
   [#15559] Wrong macro for boot_page_write(address) and ATmega128
   [#15574] unneeded compatibility break
   [#15595] GPIOR0 misspelled for ATtiny25/45/85
+  [#15732] interrupt.h: ISR() incompatibility with gcc 3.4.5
   [#15890] missing /devtools/gen-avr-lib-tree.sh
   [#16039] Names in Pxy (i.e. PA0) style of ports pins for some devices are
            not defined.
